# iiwa_stack

./: .gitignore  2022-11-17-13-37-06.bag  CompTime.m  CompTime.txt  TEST_1_21ms.m  bottom_right_inverse.txt  d_min.txt  errorFile.txt  pi.txt  positions.txt  q.txt  qdot.txt  sim_surgery.py  sim_surgery.txt  t.txt  test.m  test.txt  to_bottom_left.txt  to_bottom_right.txt  top.txt  velocities.txt
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/crazyflie_driver/: AddCrazyflieRequest.h  AddCrazyflieResponse.h  FullState.h  GenericLogData.h  GoToRequest.h  GoToResponse.h  Hover.h  LandRequest.h  LandResponse.h  LogBlock.h  NotifySetpointsStopRequest.h  NotifySetpointsStopResponse.h  Position.h  RemoveCrazyflieRequest.h  RemoveCrazyflieResponse.h  SetGroupMaskRequest.h  SetGroupMaskResponse.h  StartTrajectoryRequest.h  StartTrajectoryResponse.h  StopRequest.h  StopResponse.h  TakeoffRequest.h  TakeoffResponse.h  TrajectoryPolynomialPiece.h  UpdateParamsRequest.h  UpdateParamsResponse.h  UploadTrajectoryRequest.h  UploadTrajectoryResponse.h  VelocityWorld.h  crtpPacket.h  sendPacketRequest.h  sendPacketResponse.h
devel/include/geomagic_control/: DeviceButtonEvent.h  DeviceFeedback.h
devel/include/iiwa_driver/: AdditionalOutputs.h  ConnectionQuality.h  FRIState.h
devel/include/iiwa_msgs/: MoveToCartesianPoseGoal.h
devel/include/iiwa_tools/: GetFK.h  (+17 more)
src/: .rosinstall
src/actuonix/: CMakeLists.txt  package.xml
src/actuonix/src/: ActuonixROS.cpp  ActuonixROS_open_closepublisher.cpp  firgelli.cpp
src/iiwa_stack/: .rosinstall
(+390 files in other folders)
